--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -163,38 +163,26 @@
   }
 }
 @layer utilities {
-  .mt-\[15px\] {
-    margin-top: 15px;
-  }
   .mr-\[15px\] {
     margin-right: 15px;
   }
   .mr-\[30px\] {
     margin-right: 30px;
   }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
-  }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-\[10px\] {
+    margin-bottom: 10px;
   }
   .mb-\[15px\] {
     margin-bottom: 15px;
   }
-  .mb-\[19px\] {
-    margin-bottom: 19px;
-  }
   .mb-\[20px\] {
     margin-bottom: 20px;
   }
-  .mb-\[25px\] {
-    margin-bottom: 25px;
-  }
   .mb-\[30px\] {
     margin-bottom: 30px;
-  }
-  .ml-\[-10px\] {
-    margin-left: -10px;
   }
   .ml-\[-20px\] {
     margin-left: -20px;
@@ -229,8 +217,8 @@
   .h-\[80px\] {
     height: 80px;
   }
-  .h-\[117px\] {
-    height: 117px;
+  .h-\[100px\] {
+    height: 100px;
   }
   .h-\[120px\] {
     height: 120px;
@@ -250,6 +238,18 @@
   .h-\[700px\] {
     height: 700px;
   }
+  .h-\[830px\] {
+    height: 830px;
+  }
+  .h-\[900px\] {
+    height: 900px;
+  }
+  .h-\[1000px\] {
+    height: 1000px;
+  }
+  .h-auto {
+    height: auto;
+  }
   .w-\[30px\] {
     width: 30px;
   }
@@ -262,9 +262,6 @@
   .w-\[80px\] {
     width: 80px;
   }
-  .w-\[90px\] {
-    width: 90px;
-  }
   .w-\[100px\] {
     width: 100px;
   }
@@ -274,17 +271,23 @@
   .w-\[220px\] {
     width: 220px;
   }
+  .w-\[240px\] {
+    width: 240px;
+  }
+  .w-\[250px\] {
+    width: 250px;
+  }
   .w-\[265px\] {
     width: 265px;
   }
-  .w-\[290px\] {
-    width: 290px;
+  .w-\[280px\] {
+    width: 280px;
   }
   .w-\[300px\] {
     width: 300px;
   }
-  .w-\[315px\] {
-    width: 315px;
+  .w-\[310px\] {
+    width: 310px;
   }
   .w-auto {
     width: auto;
@@ -310,18 +313,6 @@
   .justify-start {
     justify-content: flex-start;
   }
-  .rounded {
-    border-radius: 0.25rem;
-  }
-  .rounded-2xl {
-    border-radius: var(--radius-2xl);
-  }
-  .rounded-3xl {
-    border-radius: var(--radius-3xl);
-  }
-  .rounded-4xl {
-    border-radius: var(--radius-4xl);
-  }
   .rounded-\[10px\] {
     border-radius: 10px;
   }
@@ -341,26 +332,11 @@
   .bg-\[\#323232\] {
     background-color: #323232;
   }
-  .px-\[30px\] {
-    padding-inline: 30px;
-  }
-  .py-\[30px\] {
-    padding-block: 30px;
-  }
   .text-\[12px\] {
     font-size: 12px;
   }
-  .text-\[13px\] {
-    font-size: 13px;
-  }
-  .text-\[14px\] {
-    font-size: 14px;
-  }
   .text-\[15px\] {
     font-size: 15px;
-  }
-  .text-\[16px\] {
-    font-size: 16px;
   }
   .text-\[24px\] {
     font-size: 24px;
