--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -7,22 +7,16 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-gray-400: oklch(70.7% 0.022 261.325);
-    --color-black: #000;
+    --color-gray-100: oklch(96.7% 0.003 264.542);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
+    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-white: #fff;
     --spacing: 0.25rem;
-    --container-md: 28rem;
-    --text-sm: 0.875rem;
-    --text-sm--line-height: calc(1.25 / 0.875);
-    --text-lg: 1.125rem;
-    --text-lg--line-height: calc(1.75 / 1.125);
-    --text-3xl: 1.875rem;
-    --text-3xl--line-height: calc(2.25 / 1.875);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
+    --font-weight-light: 300;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
-    --radius-lg: 0.5rem;
-    --default-transition-duration: 150ms;
-    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -173,6 +167,9 @@
   }
 }
 @layer utilities {
+  .mt-\[20px\] {
+    margin-top: 20px;
+  }
   .mt-\[50px\] {
     margin-top: 50px;
   }
@@ -182,20 +179,14 @@
   .mr-\[15px\] {
     margin-right: 15px;
   }
-  .mr-\[20px\] {
-    margin-right: 20px;
-  }
   .mr-\[30px\] {
     margin-right: 30px;
-  }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
-  .mb-5 {
-    margin-bottom: calc(var(--spacing) * 5);
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
   }
   .mb-\[5px\] {
     margin-bottom: 5px;
@@ -269,12 +260,6 @@
   .h-\[150px\] {
     height: 150px;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
-  .h-\[230px\] {
-    height: 230px;
-  }
   .h-\[240px\] {
     height: 240px;
   }
@@ -283,6 +268,9 @@
   }
   .h-\[350px\] {
     height: 350px;
+  }
+  .h-\[400px\] {
+    height: 400px;
   }
   .h-\[650px\] {
     height: 650px;
@@ -295,6 +283,9 @@
   }
   .h-auto {
     height: auto;
+  }
+  .min-h-screen {
+    min-height: 100vh;
   }
   .w-\[30px\] {
     width: 30px;
@@ -320,26 +311,14 @@
   .w-\[210px\] {
     width: 210px;
   }
-  .w-\[220px\] {
-    width: 220px;
-  }
   .w-\[225px\] {
     width: 225px;
   }
   .w-\[250px\] {
     width: 250px;
   }
-  .w-\[260px\] {
-    width: 260px;
-  }
   .w-\[265px\] {
     width: 265px;
-  }
-  .w-\[270px\] {
-    width: 270px;
-  }
-  .w-\[298px\] {
-    width: 298px;
   }
   .w-\[300px\] {
     width: 300px;
@@ -349,9 +328,6 @@
   }
   .w-auto {
     width: auto;
-  }
-  .w-full {
-    width: 100%;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -368,14 +344,8 @@
   .flex-col {
     flex-direction: column;
   }
-  .flex-wrap {
-    flex-wrap: wrap;
-  }
   .items-center {
     align-items: center;
-  }
-  .justify-around {
-    justify-content: space-around;
   }
   .justify-between {
     justify-content: space-between;
@@ -385,12 +355,6 @@
   }
   .justify-start {
     justify-content: flex-start;
-  }
-  .justify-items-end-safe {
-    justify-items: safe end;
-  }
-  .rounded {
-    border-radius: 0.25rem;
   }
   .rounded-\[10px\] {
     border-radius: 10px;
@@ -406,10 +370,6 @@
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
   }
-  .border-b-4 {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 4px;
-  }
   .border-none {
     --tw-border-style: none;
     border-style: none;
@@ -422,6 +382,12 @@
   }
   .bg-\[\#323232\] {
     background-color: #323232;
+  }
+  .bg-\[\#3233232\] {
+    background-color: #3233232;
+  }
+  .bg-gray-100 {
+    background-color: var(--color-gray-100);
   }
   .bg-transparent {
     background-color: transparent;
@@ -438,8 +404,15 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
+  .p-4 {
+    padding: calc(var(--spacing) * 4);
+  }
   .text-center {
     text-align: center;
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -463,9 +436,16 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .font-light {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
+  }
+  .text-\[\#AAAAAAA\] {
+    color: #AAAAAAA;
   }
   .text-\[\#AAAAAA\] {
     color: #AAAAAA;
@@ -473,20 +453,20 @@
   .text-\[\#FFFFFF\] {
     color: #FFFFFF;
   }
-  .text-black {
-    color: var(--color-black);
+  .text-gray-600 {
+    color: var(--color-gray-600);
+  }
+  .text-gray-700 {
+    color: var(--color-gray-700);
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .uppercase {
     text-transform: uppercase;
   }
   .underline {
     text-decoration-line: underline;
-  }
-  .opacity-30 {
-    opacity: 30%;
-  }
-  .opacity-50 {
-    opacity: 50%;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -495,16 +475,6 @@
   .outline-none {
     --tw-outline-style: none;
     outline-style: none;
-  }
-  .placeholder\:text-\[\#AAAAAA\] {
-    &::placeholder {
-      color: #AAAAAA;
-    }
-  }
-  .placeholder\:text-gray-400 {
-    &::placeholder {
-      color: var(--color-gray-400);
-    }
   }
   .focus\:ring-0 {
     &:focus {
