--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -7,6 +7,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-50: oklch(98.7% 0.022 95.277);
     --color-white: #fff;
     --spacing: 0.25rem;
     --text-2xl: 1.5rem;
@@ -194,6 +195,9 @@
   .mb-\[20px\] {
     margin-bottom: 20px;
   }
+  .mb-\[25px\] {
+    margin-bottom: 25px;
+  }
   .mb-\[30px\] {
     margin-bottom: 30px;
   }
@@ -208,6 +212,12 @@
   }
   .flex {
     display: flex;
+  }
+  .hidden {
+    display: none;
+  }
+  .table {
+    display: table;
   }
   .h-\[10px\] {
     height: 10px;
@@ -248,6 +258,9 @@
   .h-\[130px\] {
     height: 130px;
   }
+  .h-\[140px\] {
+    height: 140px;
+  }
   .h-\[150px\] {
     height: 150px;
   }
@@ -263,11 +276,17 @@
   .h-\[400px\] {
     height: 400px;
   }
+  .h-\[500px\] {
+    height: 500px;
+  }
   .h-\[650px\] {
     height: 650px;
   }
   .h-\[700px\] {
     height: 700px;
+  }
+  .h-\[900px\] {
+    height: 900px;
   }
   .h-\[1000px\] {
     height: 1000px;
@@ -277,6 +296,9 @@
   }
   .min-h-screen {
     min-height: 100vh;
+  }
+  .w-300 {
+    width: calc(var(--spacing) * 300);
   }
   .w-\[30px\] {
     width: 30px;
@@ -290,11 +312,23 @@
   .w-\[80px\] {
     width: 80px;
   }
+  .w-\[100\%\] {
+    width: 100%;
+  }
   .w-\[100px\] {
     width: 100px;
   }
+  .w-\[120px\] {
+    width: 120px;
+  }
   .w-\[130px\] {
     width: 130px;
+  }
+  .w-\[140px\] {
+    width: 140px;
+  }
+  .w-\[150px\] {
+    width: 150px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -311,6 +345,9 @@
   .w-\[265px\] {
     width: 265px;
   }
+  .w-\[280px\] {
+    width: 280px;
+  }
   .w-\[300px\] {
     width: 300px;
   }
@@ -319,6 +356,12 @@
   }
   .w-auto {
     width: auto;
+  }
+  .border-collapse {
+    border-collapse: collapse;
+  }
+  .resize {
+    resize: both;
   }
   .resize-none {
     resize: none;
@@ -331,6 +374,9 @@
   }
   .items-center {
     align-items: center;
+  }
+  .items-start {
+    align-items: flex-start;
   }
   .justify-between {
     justify-content: space-between;
@@ -371,8 +417,14 @@
   .bg-\[\#3233232\] {
     background-color: #3233232;
   }
+  .bg-amber-50 {
+    background-color: var(--color-amber-50);
+  }
   .bg-transparent {
     background-color: transparent;
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .bg-white\/30 {
     background-color: color-mix(in srgb, #fff 30%, transparent);
@@ -392,6 +444,9 @@
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-\[4px\] {
+    font-size: 4px;
   }
   .text-\[12px\] {
     font-size: 12px;
@@ -423,6 +478,9 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .text-\[\#323232\] {
+    color: #323232;
+  }
   .text-\[\#AAAAAA\] {
     color: #AAAAAA;
   }
@@ -434,6 +492,13 @@
   }
   .uppercase {
     text-transform: uppercase;
+  }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
   }
   .outline-none {
     --tw-outline-style: none;
@@ -468,6 +533,11 @@ body {
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-shadow {
   syntax: "*";
@@ -539,6 +609,7 @@ body {
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
